# DAT255_SCA

./: README.md  key_recovery_demo_with_changes.ipynb  pyproject.toml  training_scaaml_model_on_scaaml_data.ipynb
datasets/: TINYAES_1_000_000_2.hdf5
notebooks/: Collect(1).ipynb  Creating datasets.ipynb  Using datasets to train a model.ipynb  config.json  creating attack sets.ipynb  key_recovery_demo_with_changes.ipynb  stm32f0.json  testing recovery on our own dataset.ipynb  training on our data.ipynb  training scaaml model on our data.ipynb - Colab.html  training scaaml model on scaaml data.ipynb
notebooks/capture/: Attack_trace_capture.ipynb  Capturing balanced validation traces.ipynb  Capturing unbalanced validation traces.ipynb  Trace_capture_tinyaes.ipynb
notebooks/datasets/: attack_set.hdf5  testing_set.hdf5
notebooks/models/: model.py  model_DAT255.py  stm32f0_tinyaes.json  train_history.pkl
notebooks/ours/: Creating datasets for training and validation.ipynb  Creating datasets.ipynb  Creating_datasets_for_training_and_validation.ipynb  Keras_tuner_on_our_own_data.ipynb  Looking_at_model_history.ipynb  Training_on_our_data.ipynb  Tranforming our dataset.ipynb  Visualising traces.ipynb  Visualising_traces.ipynb  looking for similar keys.ipynb  new datasets creatinon using own methods.ipynb  testing recovery on our own dataset.ipynb  testing_recovery_on_our_own_dataset.ipynb  troubleshooting_traces.ipynb
notebooks/scaaml/: key_recovery_demo_with_changes.ipynb  looking at scaaml datasets.ipynb  saving_datasets.py  training_scaaml_model_on_scaaml_data.ipynb
(+2 files in other folders)
