[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DAT255_SCA"
version = "0.0.1"
authors = [
  { name="Kaspar Richardsen", email="kaspareider@gmail.com" },
]
description = "Key-byte recovery from tinyAES on CWNANO with power analysis and machinelearning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = ""
Issues = ""